# Newsletter

./: newsletter_crew.py  pyproject.toml
config/: agents.yml  tasks.yml
my_virtualenvs/: envs.toml
newsletter_generation/: main.py  newsletter_crew.py
newsletter_generation/config/: agents.yml  tasks.yml
